--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   cloud_firestore: ^5.2.0
   image_picker: ^1.0.0
   firebase_storage: ^12.1.2
+  flutter_nfc_kit: ^3.5.2
 
 dev_dependencies:
   flutter_test:
